# storage/api-docs/api-docs.json
@@ -3727,6 +3727,9 @@
                     },
                     "401": {
                         "$ref": "#/components/responses/Unauthorized"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Failed"
                     }
                 },
                 "security": [
@@ -3780,11 +3783,17 @@
                     }
                 ],
                 "responses": {
+                    "400": {
+                        "$ref": "#/components/responses/BadRequest"
+                    },
                     "200": {
                         "$ref": "#/components/responses/Success"
                     },
                     "401": {
                         "$ref": "#/components/responses/Unauthorized"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Failed"
                     }
                 },
                 "security": [
@@ -3847,11 +3856,17 @@
                     "200": {
                         "$ref": "#/components/responses/Success"
                     },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequest"
+                    },
                     "401": {
                         "$ref": "#/components/responses/Unauthorized"
                     },
                     "404": {
                         "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Failed"
                     }
                 },
                 "security": [
@@ -3884,6 +3899,12 @@
                     },
                     "401": {
                         "$ref": "#/components/responses/Unauthorized"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Failed"
                     }
                 },
                 "security": [
@@ -3951,11 +3972,17 @@
                     "200": {
                         "$ref": "#/components/responses/Success"
                     },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequest"
+                    },
                     "401": {
                         "$ref": "#/components/responses/Unauthorized"
                     },
                     "404": {
                         "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Failed"
                     }
                 },
                 "security": [
